source/parser/yy_parser.output
Terminals unused in grammar

   TOKEN_TYPE_STRING


State 71 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 81 conflicts: 8 shift/reduce
State 82 conflicts: 3 shift/reduce
State 119 conflicts: 2 shift/reduce
State 166 conflicts: 1 shift/reduce
State 168 conflicts: 3 shift/reduce
State 169 conflicts: 3 shift/reduce
State 170 conflicts: 2 shift/reduce


Grammar

    0 $accept: module $end

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope

    3 module_create_scope: TOKEN_TYPE_IDENTIFIER

    4 module_remove_scope: TOKEN_TYPE_IDENTIFIER

    5 declarations: constdecl vardecl procdecl_list
    6             | constdecl procdecl_list
    7             | vardecl procdecl_list
    8             | procdecl_list

    9 constdecl: TOKEN_TYPE_CONST constdecl_list

   10 constdecl_list: constdecl_list constlist TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   11               | /* empty */

   12 constlist: constlist TOKEN_TYPE_COMMA const_addinfo TOKEN_TYPE_ASSIGN expression
   13          | const_addinfo TOKEN_TYPE_ASSIGN expression

   14 const_addinfo: TOKEN_TYPE_IDENTIFIER

   15 vardecl: TOKEN_TYPE_VAR vardecl_list

   16 vardecl_list: vardecl_list varlist TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   17             | /* empty */

   18 varlist: varlist TOKEN_TYPE_COMMA var_addinfo
   19        | var_addinfo

   20 var_addinfo: TOKEN_TYPE_IDENTIFIER

   21 datatype: TOKEN_TYPE_BOOLEAN
   22         | TOKEN_TYPE_INTEGER

   23 procdecl_list: procdecl_list procdecl
   24              | /* empty */

   25 procdecl: procheader procbody

   26 procheader: TOKEN_TYPE_PROCEDURE procheader_create_scope formalpars TOKEN_TYPE_SEMICOLON
   27           | TOKEN_TYPE_FUNCTION funcheader_create_scope formalpars TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   28           | TOKEN_TYPE_PROCEDURE procheader_create_scope formalpars
   29           | TOKEN_TYPE_FUNCTION funcheader_create_scope formalpars TOKEN_TYPE_COLON datatype
   30           | TOKEN_TYPE_FUNCTION funcheader_create_scope formalpars TOKEN_TYPE_SEMICOLON

   31 procheader_create_scope: TOKEN_TYPE_IDENTIFIER

   32 funcheader_create_scope: TOKEN_TYPE_IDENTIFIER

   33 procbody: vardecl TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END procbody_remove_scope TOKEN_TYPE_SEMICOLON
   34         | TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END procbody_remove_scope TOKEN_TYPE_SEMICOLON
   35         | TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END procbody_remove_scope

   36 procbody_remove_scope: TOKEN_TYPE_IDENTIFIER

   37 formalpars: TOKEN_TYPE_LEFT_BRACKET fpardecl_opt_list TOKEN_TYPE_RIGHT_BRACKET

   38 fpardecl_opt_list: fpardecl_list
   39                  | /* empty */

   40 fpardecl_list: fpardecl_list TOKEN_TYPE_SEMICOLON fparlist TOKEN_TYPE_COLON datatype
   41              | fparlist TOKEN_TYPE_COLON datatype

   42 fparlist: fparlist TOKEN_TYPE_COMMA fpar_addinfo
   43         | fpar_addinfo

   44 fpar_addinfo: TOKEN_TYPE_IDENTIFIER

   45 statements: statements statement TOKEN_TYPE_SEMICOLON
   46           | /* empty */
   47           | statements statement

   48 expression: expression TOKEN_TYPE_OR andexp
   49           | andexp

   50 andexp: andexp TOKEN_TYPE_AND relexp
   51       | relexp

   52 relexp: aritexp rel_op aritexp
   53       | aritexp

   54 rel_op: TOKEN_TYPE_GREATER
   55       | TOKEN_TYPE_LESS
   56       | TOKEN_TYPE_GREATER_EQUAL
   57       | TOKEN_TYPE_LESS_EQUAL
   58       | TOKEN_TYPE_EQUAL
   59       | TOKEN_TYPE_NOT_EQUAL

   60 aritexp: aritexp TOKEN_TYPE_PLUS term
   61        | aritexp TOKEN_TYPE_MINUS term
   62        | term

   63 term: term TOKEN_TYPE_ASTERISK factor
   64     | term TOKEN_TYPE_SLASH factor
   65     | term TOKEN_TYPE_MOD factor
   66     | factor

   67 factor: TOKEN_TYPE_PLUS primary
   68       | TOKEN_TYPE_MINUS primary
   69       | TOKEN_TYPE_NOT primary
   70       | primary

   71 primary: TOKEN_TYPE_LEFT_BRACKET expression TOKEN_TYPE_RIGHT_BRACKET
   72        | funccall
   73        | literal
   74        | checkIdentifier
   75        | TOKEN_TYPE_LEFT_BRACKET expression

   76 checkIdentifier: TOKEN_TYPE_IDENTIFIER

   77 literal: TOKEN_TYPE_BOOLEAN_LITERAL
   78        | TOKEN_TYPE_INTEGER_LITERAL

   79 funccall: TOKEN_TYPE_IDENTIFIER actualpar

   80 proccall: TOKEN_TYPE_IDENTIFIER actualpar

   81 actualpar: TOKEN_TYPE_LEFT_BRACKET parameters_list TOKEN_TYPE_RIGHT_BRACKET
   82          | TOKEN_TYPE_LEFT_BRACKET TOKEN_TYPE_RIGHT_BRACKET

   83 parameters_list: parameters_list TOKEN_TYPE_COMMA parameter
   84                | parameter

   85 parameter: expression

   86 statement: assignment
   87          | conditional
   88          | repetition
   89          | proccall
   90          | io_statement
   91          | TOKEN_TYPE_CONTINUE
   92          | TOKEN_TYPE_BREAK
   93          | TOKEN_TYPE_RETURN expression

   94 assignment: checkIdentifier TOKEN_TYPE_ASSIGN expression

   95 conditional: TOKEN_TYPE_IF expression TOKEN_TYPE_THEN statements elseif_opt_list TOKEN_TYPE_END
   96            | TOKEN_TYPE_IF expression statements elseif_opt_list TOKEN_TYPE_END

   97 elseif_opt_list: TOKEN_TYPE_ELSIF expression TOKEN_TYPE_THEN statements elseif_opt_list
   98                | TOKEN_TYPE_ELSE statements
   99                | /* empty */
  100                | TOKEN_TYPE_ELSIF expression statements elseif_opt_list

  101 repetition: TOKEN_TYPE_WHILE expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  102           | TOKEN_TYPE_REPEAT statements TOKEN_TYPE_UNTIL expression
  103           | TOKEN_TYPE_FOR assignment TOKEN_TYPE_TO expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  104           | TOKEN_TYPE_WHILE expression statements TOKEN_TYPE_END
  105           | TOKEN_TYPE_FOR assignment expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  106           | TOKEN_TYPE_FOR assignment TOKEN_TYPE_TO expression statements TOKEN_TYPE_END

  107 io_statement: TOKEN_TYPE_WRITE TOKEN_TYPE_LEFT_BRACKET io_parameter TOKEN_TYPE_RIGHT_BRACKET
  108             | TOKEN_TYPE_WRITELN
  109             | TOKEN_TYPE_WRITELN TOKEN_TYPE_LEFT_BRACKET TOKEN_TYPE_RIGHT_BRACKET
  110             | TOKEN_TYPE_WRITELN TOKEN_TYPE_LEFT_BRACKET io_parameter TOKEN_TYPE_RIGHT_BRACKET
  111             | TOKEN_TYPE_READ TOKEN_TYPE_LEFT_BRACKET checkIdentifier TOKEN_TYPE_RIGHT_BRACKET

  112 io_parameter: parameter
  113             | TOKEN_TYPE_STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_TYPE_IDENTIFIER (258) 3 4 14 20 31 32 36 44 76 79 80
TOKEN_TYPE_BOOLEAN (259) 21
TOKEN_TYPE_INTEGER (260) 22
TOKEN_TYPE_STRING (261)
TOKEN_TYPE_BOOLEAN_LITERAL (262) 77
TOKEN_TYPE_INTEGER_LITERAL (263) 78
TOKEN_TYPE_STRING_LITERAL (264) 113
TOKEN_TYPE_MODULE (265) 1 2
TOKEN_TYPE_PROCEDURE (266) 26 28
TOKEN_TYPE_FUNCTION (267) 27 29 30
TOKEN_TYPE_CONST (268) 9
TOKEN_TYPE_VAR (269) 15
TOKEN_TYPE_BEGIN (270) 1 2 33 34 35
TOKEN_TYPE_END (271) 1 2 33 34 35 95 96 101 103 104 105 106
TOKEN_TYPE_IF (272) 95 96
TOKEN_TYPE_THEN (273) 95 97
TOKEN_TYPE_ELSIF (274) 97 100
TOKEN_TYPE_ELSE (275) 98
TOKEN_TYPE_WHILE (276) 101 104
TOKEN_TYPE_REPEAT (277) 102
TOKEN_TYPE_UNTIL (278) 102
TOKEN_TYPE_FOR (279) 103 105 106
TOKEN_TYPE_CONTINUE (280) 91
TOKEN_TYPE_BREAK (281) 92
TOKEN_TYPE_RETURN (282) 93
TOKEN_TYPE_DO (283) 101 103 105
TOKEN_TYPE_TO (284) 103 106
TOKEN_TYPE_AND (285) 50
TOKEN_TYPE_OR (286) 48
TOKEN_TYPE_NOT (287) 69
TOKEN_TYPE_WRITE (288) 107
TOKEN_TYPE_WRITELN (289) 108 109 110
TOKEN_TYPE_READ (290) 111
TOKEN_TYPE_LESS (291) 55
TOKEN_TYPE_LESS_EQUAL (292) 57
TOKEN_TYPE_EQUAL (293) 58
TOKEN_TYPE_NOT_EQUAL (294) 59
TOKEN_TYPE_GREATER (295) 54
TOKEN_TYPE_GREATER_EQUAL (296) 56
TOKEN_TYPE_COLON (297) 10 16 27 29 40 41
TOKEN_TYPE_SEMICOLON (298) 1 2 10 16 26 27 30 33 34 40 45
TOKEN_TYPE_FULL_STOP (299) 1
TOKEN_TYPE_COMMA (300) 12 18 42 83
TOKEN_TYPE_LEFT_BRACKET (301) 37 71 75 81 82 107 109 110 111
TOKEN_TYPE_RIGHT_BRACKET (302) 37 71 81 82 107 109 110 111
TOKEN_TYPE_ASSIGN (303) 12 13 94
TOKEN_TYPE_PLUS (304) 60 67
TOKEN_TYPE_MINUS (305) 61 68
TOKEN_TYPE_ASTERISK (306) 63
TOKEN_TYPE_MOD (307) 65
TOKEN_TYPE_SLASH (308) 64


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
module (55)
    on left: 1 2, on right: 0
module_create_scope (56)
    on left: 3, on right: 1 2
module_remove_scope (57)
    on left: 4, on right: 1 2
declarations (58)
    on left: 5 6 7 8, on right: 1 2
constdecl (59)
    on left: 9, on right: 5 6
constdecl_list (60)
    on left: 10 11, on right: 9 10
constlist (61)
    on left: 12 13, on right: 10 12
const_addinfo (62)
    on left: 14, on right: 12 13
vardecl (63)
    on left: 15, on right: 5 7 33
vardecl_list (64)
    on left: 16 17, on right: 15 16
varlist (65)
    on left: 18 19, on right: 16 18
var_addinfo (66)
    on left: 20, on right: 18 19
datatype (67)
    on left: 21 22, on right: 10 16 27 29 40 41
procdecl_list (68)
    on left: 23 24, on right: 5 6 7 8 23
procdecl (69)
    on left: 25, on right: 23
procheader (70)
    on left: 26 27 28 29 30, on right: 25
procheader_create_scope (71)
    on left: 31, on right: 26 28
funcheader_create_scope (72)
    on left: 32, on right: 27 29 30
procbody (73)
    on left: 33 34 35, on right: 25
procbody_remove_scope (74)
    on left: 36, on right: 33 34 35
formalpars (75)
    on left: 37, on right: 26 27 28 29 30
fpardecl_opt_list (76)
    on left: 38 39, on right: 37
fpardecl_list (77)
    on left: 40 41, on right: 38 40
fparlist (78)
    on left: 42 43, on right: 40 41 42
fpar_addinfo (79)
    on left: 44, on right: 42 43
statements (80)
    on left: 45 46 47, on right: 1 2 33 34 35 45 47 95 96 97 98 100
    101 102 103 104 105 106
expression (81)
    on left: 48 49, on right: 12 13 48 71 75 85 93 94 95 96 97 100
    101 102 103 104 105 106
andexp (82)
    on left: 50 51, on right: 48 49 50
relexp (83)
    on left: 52 53, on right: 50 51
rel_op (84)
    on left: 54 55 56 57 58 59, on right: 52
aritexp (85)
    on left: 60 61 62, on right: 52 53 60 61
term (86)
    on left: 63 64 65 66, on right: 60 61 62 63 64 65
factor (87)
    on left: 67 68 69 70, on right: 63 64 65 66
primary (88)
    on left: 71 72 73 74 75, on right: 67 68 69 70
checkIdentifier (89)
    on left: 76, on right: 74 94 111
literal (90)
    on left: 77 78, on right: 73
funccall (91)
    on left: 79, on right: 72
proccall (92)
    on left: 80, on right: 89
actualpar (93)
    on left: 81 82, on right: 79 80
parameters_list (94)
    on left: 83 84, on right: 81 83
parameter (95)
    on left: 85, on right: 83 84 112
statement (96)
    on left: 86 87 88 89 90 91 92 93, on right: 45 47
assignment (97)
    on left: 94, on right: 86 103 105 106
conditional (98)
    on left: 95 96, on right: 87
elseif_opt_list (99)
    on left: 97 98 99 100, on right: 95 96 97 100
repetition (100)
    on left: 101 102 103 104 105 106, on right: 88
io_statement (101)
    on left: 107 108 109 110 111, on right: 90
io_parameter (102)
    on left: 112 113, on right: 107 110


state 0

    0 $accept: . module $end

    TOKEN_TYPE_MODULE  shift, and go to state 1

    module  go to state 2


state 1

    1 module: TOKEN_TYPE_MODULE . module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE . module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 3

    module_create_scope  go to state 4


state 2

    0 $accept: module . $end

    $end  shift, and go to state 5


state 3

    3 module_create_scope: TOKEN_TYPE_IDENTIFIER .

    $default  reduce using rule 3 (module_create_scope)


state 4

    1 module: TOKEN_TYPE_MODULE module_create_scope . TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope . TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope

    TOKEN_TYPE_SEMICOLON  shift, and go to state 6


state 5

    0 $accept: module $end .

    $default  accept


state 6

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON . declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON . declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope

    TOKEN_TYPE_CONST  shift, and go to state 7
    TOKEN_TYPE_VAR    shift, and go to state 8

    $default  reduce using rule 24 (procdecl_list)

    declarations   go to state 9
    constdecl      go to state 10
    vardecl        go to state 11
    procdecl_list  go to state 12


state 7

    9 constdecl: TOKEN_TYPE_CONST . constdecl_list

    $default  reduce using rule 11 (constdecl_list)

    constdecl_list  go to state 13


state 8

   15 vardecl: TOKEN_TYPE_VAR . vardecl_list

    $default  reduce using rule 17 (vardecl_list)

    vardecl_list  go to state 14


state 9

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations . TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations . TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END module_remove_scope

    TOKEN_TYPE_BEGIN  shift, and go to state 15


state 10

    5 declarations: constdecl . vardecl procdecl_list
    6             | constdecl . procdecl_list

    TOKEN_TYPE_VAR  shift, and go to state 8

    $default  reduce using rule 24 (procdecl_list)

    vardecl        go to state 16
    procdecl_list  go to state 17


state 11

    7 declarations: vardecl . procdecl_list

    $default  reduce using rule 24 (procdecl_list)

    procdecl_list  go to state 18


state 12

    8 declarations: procdecl_list .
   23 procdecl_list: procdecl_list . procdecl

    TOKEN_TYPE_PROCEDURE  shift, and go to state 19
    TOKEN_TYPE_FUNCTION   shift, and go to state 20

    $default  reduce using rule 8 (declarations)

    procdecl    go to state 21
    procheader  go to state 22


state 13

    9 constdecl: TOKEN_TYPE_CONST constdecl_list .
   10 constdecl_list: constdecl_list . constlist TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 23

    $default  reduce using rule 9 (constdecl)

    constlist      go to state 24
    const_addinfo  go to state 25


state 14

   15 vardecl: TOKEN_TYPE_VAR vardecl_list .
   16 vardecl_list: vardecl_list . varlist TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 15 (vardecl)

    varlist      go to state 27
    var_addinfo  go to state 28


state 15

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN . statements TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN . statements TOKEN_TYPE_END module_remove_scope

    $default  reduce using rule 46 (statements)

    statements  go to state 29


state 16

    5 declarations: constdecl vardecl . procdecl_list

    $default  reduce using rule 24 (procdecl_list)

    procdecl_list  go to state 30


state 17

    6 declarations: constdecl procdecl_list .
   23 procdecl_list: procdecl_list . procdecl

    TOKEN_TYPE_PROCEDURE  shift, and go to state 19
    TOKEN_TYPE_FUNCTION   shift, and go to state 20

    $default  reduce using rule 6 (declarations)

    procdecl    go to state 21
    procheader  go to state 22


state 18

    7 declarations: vardecl procdecl_list .
   23 procdecl_list: procdecl_list . procdecl

    TOKEN_TYPE_PROCEDURE  shift, and go to state 19
    TOKEN_TYPE_FUNCTION   shift, and go to state 20

    $default  reduce using rule 7 (declarations)

    procdecl    go to state 21
    procheader  go to state 22


state 19

   26 procheader: TOKEN_TYPE_PROCEDURE . procheader_create_scope formalpars TOKEN_TYPE_SEMICOLON
   28           | TOKEN_TYPE_PROCEDURE . procheader_create_scope formalpars

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 31

    procheader_create_scope  go to state 32


state 20

   27 procheader: TOKEN_TYPE_FUNCTION . funcheader_create_scope formalpars TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   29           | TOKEN_TYPE_FUNCTION . funcheader_create_scope formalpars TOKEN_TYPE_COLON datatype
   30           | TOKEN_TYPE_FUNCTION . funcheader_create_scope formalpars TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 33

    funcheader_create_scope  go to state 34


state 21

   23 procdecl_list: procdecl_list procdecl .

    $default  reduce using rule 23 (procdecl_list)


state 22

   25 procdecl: procheader . procbody

    TOKEN_TYPE_VAR    shift, and go to state 8
    TOKEN_TYPE_BEGIN  shift, and go to state 35

    vardecl   go to state 36
    procbody  go to state 37


state 23

   14 const_addinfo: TOKEN_TYPE_IDENTIFIER .

    $default  reduce using rule 14 (const_addinfo)


state 24

   10 constdecl_list: constdecl_list constlist . TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   12 constlist: constlist . TOKEN_TYPE_COMMA const_addinfo TOKEN_TYPE_ASSIGN expression

    TOKEN_TYPE_COLON  shift, and go to state 38
    TOKEN_TYPE_COMMA  shift, and go to state 39


state 25

   13 constlist: const_addinfo . TOKEN_TYPE_ASSIGN expression

    TOKEN_TYPE_ASSIGN  shift, and go to state 40


state 26

   20 var_addinfo: TOKEN_TYPE_IDENTIFIER .

    $default  reduce using rule 20 (var_addinfo)


state 27

   16 vardecl_list: vardecl_list varlist . TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   18 varlist: varlist . TOKEN_TYPE_COMMA var_addinfo

    TOKEN_TYPE_COLON  shift, and go to state 41
    TOKEN_TYPE_COMMA  shift, and go to state 42


state 28

   19 varlist: var_addinfo .

    $default  reduce using rule 19 (varlist)


state 29

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements . TOKEN_TYPE_END module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements . TOKEN_TYPE_END module_remove_scope
   45 statements: statements . statement TOKEN_TYPE_SEMICOLON
   47           | statements . statement

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 43
    TOKEN_TYPE_END         shift, and go to state 44
    TOKEN_TYPE_IF          shift, and go to state 45
    TOKEN_TYPE_WHILE       shift, and go to state 46
    TOKEN_TYPE_REPEAT      shift, and go to state 47
    TOKEN_TYPE_FOR         shift, and go to state 48
    TOKEN_TYPE_CONTINUE    shift, and go to state 49
    TOKEN_TYPE_BREAK       shift, and go to state 50
    TOKEN_TYPE_RETURN      shift, and go to state 51
    TOKEN_TYPE_WRITE       shift, and go to state 52
    TOKEN_TYPE_WRITELN     shift, and go to state 53
    TOKEN_TYPE_READ        shift, and go to state 54

    checkIdentifier  go to state 55
    proccall         go to state 56
    statement        go to state 57
    assignment       go to state 58
    conditional      go to state 59
    repetition       go to state 60
    io_statement     go to state 61


state 30

    5 declarations: constdecl vardecl procdecl_list .
   23 procdecl_list: procdecl_list . procdecl

    TOKEN_TYPE_PROCEDURE  shift, and go to state 19
    TOKEN_TYPE_FUNCTION   shift, and go to state 20

    $default  reduce using rule 5 (declarations)

    procdecl    go to state 21
    procheader  go to state 22


state 31

   31 procheader_create_scope: TOKEN_TYPE_IDENTIFIER .

    $default  reduce using rule 31 (procheader_create_scope)


state 32

   26 procheader: TOKEN_TYPE_PROCEDURE procheader_create_scope . formalpars TOKEN_TYPE_SEMICOLON
   28           | TOKEN_TYPE_PROCEDURE procheader_create_scope . formalpars

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 62

    formalpars  go to state 63


state 33

   32 funcheader_create_scope: TOKEN_TYPE_IDENTIFIER .

    $default  reduce using rule 32 (funcheader_create_scope)


state 34

   27 procheader: TOKEN_TYPE_FUNCTION funcheader_create_scope . formalpars TOKEN_TYPE_COLON datatype TOKEN_TYPE_SEMICOLON
   29           | TOKEN_TYPE_FUNCTION funcheader_create_scope . formalpars TOKEN_TYPE_COLON datatype
   30           | TOKEN_TYPE_FUNCTION funcheader_create_scope . formalpars TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 62

    formalpars  go to state 64


state 35

   34 procbody: TOKEN_TYPE_BEGIN . statements TOKEN_TYPE_END procbody_remove_scope TOKEN_TYPE_SEMICOLON
   35         | TOKEN_TYPE_BEGIN . statements TOKEN_TYPE_END procbody_remove_scope

    $default  reduce using rule 46 (statements)

    statements  go to state 65


state 36

   33 procbody: vardecl . TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END procbody_remove_scope TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_BEGIN  shift, and go to state 66


state 37

   25 procdecl: procheader procbody .

    $default  reduce using rule 25 (procdecl)


state 38

   10 constdecl_list: constdecl_list constlist TOKEN_TYPE_COLON . datatype TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_BOOLEAN  shift, and go to state 67
    TOKEN_TYPE_INTEGER  shift, and go to state 68

    datatype  go to state 69


state 39

   12 constlist: constlist TOKEN_TYPE_COMMA . const_addinfo TOKEN_TYPE_ASSIGN expression

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 23

    const_addinfo  go to state 70


state 40

   13 constlist: const_addinfo TOKEN_TYPE_ASSIGN . expression

    TOKEN_TYPE_IDENTIFIER       shift, and go to state 71
    TOKEN_TYPE_BOOLEAN_LITERAL  shift, and go to state 72
    TOKEN_TYPE_INTEGER_LITERAL  shift, and go to state 73
    TOKEN_TYPE_NOT              shift, and go to state 74
    TOKEN_TYPE_LEFT_BRACKET     shift, and go to state 75
    TOKEN_TYPE_PLUS             shift, and go to state 76
    TOKEN_TYPE_MINUS            shift, and go to state 77

    expression       go to state 78
    andexp           go to state 79
    relexp           go to state 80
    aritexp          go to state 81
    term             go to state 82
    factor           go to state 83
    primary          go to state 84
    checkIdentifier  go to state 85
    literal          go to state 86
    funccall         go to state 87


state 41

   16 vardecl_list: vardecl_list varlist TOKEN_TYPE_COLON . datatype TOKEN_TYPE_SEMICOLON

    TOKEN_TYPE_BOOLEAN  shift, and go to state 67
    TOKEN_TYPE_INTEGER  shift, and go to state 68

    datatype  go to state 88


state 42

   18 varlist: varlist TOKEN_TYPE_COMMA . var_addinfo

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 26

    var_addinfo  go to state 89


state 43

   76 checkIdentifier: TOKEN_TYPE_IDENTIFIER .
   80 proccall: TOKEN_TYPE_IDENTIFIER . actualpar

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 90

    $default  reduce using rule 76 (checkIdentifier)

    actualpar  go to state 91


state 44

    1 module: TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END . module_remove_scope TOKEN_TYPE_FULL_STOP
    2       | TOKEN_TYPE_MODULE module_create_scope TOKEN_TYPE_SEMICOLON declarations TOKEN_TYPE_BEGIN statements TOKEN_TYPE_END . module_remove_scope

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 92

    module_remove_scope  go to state 93


state 45

   95 conditional: TOKEN_TYPE_IF . expression TOKEN_TYPE_THEN statements elseif_opt_list TOKEN_TYPE_END
   96            | TOKEN_TYPE_IF . expression statements elseif_opt_list TOKEN_TYPE_END

    TOKEN_TYPE_IDENTIFIER       shift, and go to state 71
    TOKEN_TYPE_BOOLEAN_LITERAL  shift, and go to state 72
    TOKEN_TYPE_INTEGER_LITERAL  shift, and go to state 73
    TOKEN_TYPE_NOT              shift, and go to state 74
    TOKEN_TYPE_LEFT_BRACKET     shift, and go to state 75
    TOKEN_TYPE_PLUS             shift, and go to state 76
    TOKEN_TYPE_MINUS            shift, and go to state 77

    expression       go to state 94
    andexp           go to state 79
    relexp           go to state 80
    aritexp          go to state 81
    term             go to state 82
    factor           go to state 83
    primary          go to state 84
    checkIdentifier  go to state 85
    literal          go to state 86
    funccall         go to state 87


state 46

  101 repetition: TOKEN_TYPE_WHILE . expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  104           | TOKEN_TYPE_WHILE . expression statements TOKEN_TYPE_END

    TOKEN_TYPE_IDENTIFIER       shift, and go to state 71
    TOKEN_TYPE_BOOLEAN_LITERAL  shift, and go to state 72
    TOKEN_TYPE_INTEGER_LITERAL  shift, and go to state 73
    TOKEN_TYPE_NOT              shift, and go to state 74
    TOKEN_TYPE_LEFT_BRACKET     shift, and go to state 75
    TOKEN_TYPE_PLUS             shift, and go to state 76
    TOKEN_TYPE_MINUS            shift, and go to state 77

    expression       go to state 95
    andexp           go to state 79
    relexp           go to state 80
    aritexp          go to state 81
    term             go to state 82
    factor           go to state 83
    primary          go to state 84
    checkIdentifier  go to state 85
    literal          go to state 86
    funccall         go to state 87


state 47

  102 repetition: TOKEN_TYPE_REPEAT . statements TOKEN_TYPE_UNTIL expression

    $default  reduce using rule 46 (statements)

    statements  go to state 96


state 48

  103 repetition: TOKEN_TYPE_FOR . assignment TOKEN_TYPE_TO expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  105           | TOKEN_TYPE_FOR . assignment expression TOKEN_TYPE_DO statements TOKEN_TYPE_END
  106           | TOKEN_TYPE_FOR . assignment TOKEN_TYPE_TO expression statements TOKEN_TYPE_END

    TOKEN_TYPE_IDENTIFIER  shift, and go to state 97

    checkIdentifier  go to state 55
    assignment       go to state 98


state 49

   91 statement: TOKEN_TYPE_CONTINUE .

    $default  reduce using rule 91 (statement)


state 50

   92 statement: TOKEN_TYPE_BREAK .

    $default  reduce using rule 92 (statement)


state 51

   93 statement: TOKEN_TYPE_RETURN . expression

    TOKEN_TYPE_IDENTIFIER       shift, and go to state 71
    TOKEN_TYPE_BOOLEAN_LITERAL  shift, and go to state 72
    TOKEN_TYPE_INTEGER_LITERAL  shift, and go to state 73
    TOKEN_TYPE_NOT              shift, and go to state 74
    TOKEN_TYPE_LEFT_BRACKET     shift, and go to state 75
    TOKEN_TYPE_PLUS             shift, and go to state 76
    TOKEN_TYPE_MINUS            shift, and go to state 77

    expression       go to state 99
    andexp           go to state 79
    relexp           go to state 80
    aritexp          go to state 81
    term             go to state 82
    factor           go to state 83
    primary          go to state 84
    checkIdentifier  go to state 85
    literal          go to state 86
    funccall         go to state 87


state 52

  107 io_statement: TOKEN_TYPE_WRITE . TOKEN_TYPE_LEFT_BRACKET io_parameter TOKEN_TYPE_RIGHT_BRACKET

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 100


state 53

  108 io_statement: TOKEN_TYPE_WRITELN .
  109             | TOKEN_TYPE_WRITELN . TOKEN_TYPE_LEFT_BRACKET TOKEN_TYPE_RIGHT_BRACKET
  110             | TOKEN_TYPE_WRITELN . TOKEN_TYPE_LEFT_BRACKET io_parameter TOKEN_TYPE_RIGHT_BRACKET

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 101

    $default  reduce using rule 108 (io_statement)


state 54

  111 io_statement: TOKEN_TYPE_READ . TOKEN_TYPE_LEFT_BRACKET checkIdentifier TOKEN_TYPE_RIGHT_BRACKET

    TOKEN_TYPE_LEFT_BRACKET  shift, and go to state 102


state 55

   94 assignment: checkIdentifier . TOKEN_TYPE_ASSIGN expression

